--- a/requirements.txt
+++ b/requirements.txt
@@ -1,182 +1,202 @@
-aiohappyeyeballs
-aiohttp
-aiosignal
-altair
-annotated-types
-anyio
-appdirs
-async-timeout
-attrs
-backoff
-bcrypt
-beautifulsoup4
-blinker
-build
-cachetools
-certifi
-charset-normalizer
-chromadb
-click
-colorama
-coloredlogs
-dataclasses-json
-distro
-dnspython
-docx2pdf
-dotenv
-durationpy
-email_validator
-exceptiongroup
-filelock
-filetype
-flatbuffers
-frozenlist
-fsspec
-gitdb
-GitPython
-google-ai-generativelanguage
-google-api-core
-google-api-python-client
-google-auth
-google-auth-httplib2
-google-auth-oauthlib
-googleapis-common-protos
-grandalf
-greenlet
-groq
-grpcio
-grpcio-status
-h11
-httpcore
-httplib2
-httptools
-httpx
-httpx-sse
-huggingface-hub
-humanfriendly
-idna
-importlib_metadata
-importlib_resources
-Jinja2
-jiter
-joblib
-jsonpatch
-jsonpointer
-jsonschema
-jsonschema-specifications
-kubernetes
-langchain
-langchain-chroma
-langchain-community
-langchain-core
-langchain-google-genai
-langchain-groq
-langchain-huggingface
-langchain-perplexity
-langchain-text-splitters
-langgraph
-langgraph-checkpoint
-langgraph-prebuilt
-langgraph-sdk
-langsmith
-lxml
-markdown-it-py
-MarkupSafe
-marshmallow
-mdurl
-mmh3
-mpmath
-multidict
-mypy_extensions
-narwhals
-networkx
-numpy
-oauthlib
-onnxruntime
-openai
-opentelemetry-api
-opentelemetry-exporter-otlp-proto-common
-opentelemetry-exporter-otlp-proto-grpc
-opentelemetry-proto
-opentelemetry-sdk
-opentelemetry-semantic-conventions
-orjson
-ormsgpack
-overrides
-packaging
-pandas
-pdflatex
-pillow
-plasTeX
-posthog
-propcache
-proto-plus
-protobuf
-pyarrow
-pyasn1
-pyasn1_modules
-pybase64
-pydantic
-pydantic-settings
-pydantic_core
-pydeck
-pyee
-Pygments
-pyparsing
-pypdf
-PyPDF2
-PyPika
-pyppeteer
-pyproject_hooks
-pyreadline3
-python-dateutil
-python-docx
-python-dotenv
-pytz
-PyYAML
-referencing
-regex
-requests
-requests-oauthlib
-requests-toolbelt
-rich
-rpds-py
-rsa
-safetensors
-scikit-learn
-scipy
-sentence-transformers
-shellingham
-six
-smmap
-sniffio
-soupsieve
-SQLAlchemy
-streamlit
-sympy
-tenacity
-threadpoolctl
-tokenizers
-toml
-tomli
-torch
-tornado
-tqdm
-transformers
-typer
-typing-inspect
-typing-inspection
-typing_extensions
-tzdata
-Unidecode
-uritemplate
-urllib3
-uvicorn
-watchdog
-watchfiles
-websocket-client
-websockets
-xxhash
-yarl
-zipp
-zstandard
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+appdirs==1.4.4
+arabic-reshaper==3.0.0
+asn1crypto==1.5.1
+async-timeout==4.0.3
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+build==1.2.2.post1
+cachetools==5.5.2
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+chromadb==1.0.15
+click==8.2.1
+cobble==0.1.4
+colorama==0.4.6
+coloredlogs==15.0.1
+cryptography==45.0.6
+cssselect2==0.8.0
+dataclasses-json==0.6.7
+distro==1.9.0
+dnspython==2.7.0
+docx2pdf==0.1.8
+dotenv==0.9.9
+durationpy==0.10
+email_validator==2.2.0
+exceptiongroup==1.3.0
+filelock==3.18.0
+filetype==1.2.0
+flatbuffers==25.2.10
+frozenlist==1.7.0
+fsspec==2025.7.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-ai-generativelanguage==0.6.18
+google-api-core==2.25.1
+google-api-python-client==2.176.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+googleapis-common-protos==1.70.0
+grandalf==0.8
+greenlet==3.2.3
+groq==0.30.0
+grpcio==1.73.1
+grpcio-status==1.73.1
+h11==0.16.0
+html5lib==1.1
+httpcore==1.0.9
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.1
+huggingface-hub==0.33.4
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kubernetes==33.1.0
+langchain==0.3.26
+langchain-chroma==0.2.4
+langchain-community==0.3.27
+langchain-core==0.3.72
+langchain-google-genai==2.1.8
+langchain-groq==0.3.6
+langchain-huggingface==0.3.0
+langchain-perplexity==0.1.2
+langchain-text-splitters==0.3.8
+langgraph==0.5.3
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.5.2
+langgraph-sdk==0.1.73
+langsmith==0.4.8
+lxml==6.0.0
+mammoth==1.10.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+mmh3==5.1.0
+mpmath==1.3.0
+multidict==6.6.3
+mypy_extensions==1.1.0
+narwhals==2.0.1
+networkx==3.4.2
+numpy==2.2.6
+oauthlib==3.3.1
+onnxruntime==1.22.1
+openai==1.98.0
+opentelemetry-api==1.35.0
+opentelemetry-exporter-otlp-proto-common==1.35.0
+opentelemetry-exporter-otlp-proto-grpc==1.35.0
+opentelemetry-proto==1.35.0
+opentelemetry-sdk==1.35.0
+opentelemetry-semantic-conventions==0.56b0
+orjson==3.11.0
+ormsgpack==1.10.0
+oscrypto==1.3.0
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.1
+pdflatex==0.1.3
+pillow==11.3.0
+plasTeX==3.1
+posthog==5.4.0
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==6.31.1
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pydeck==0.9.1
+pyee==11.1.1
+Pygments==2.19.2
+pyHanko==0.29.1
+pyhanko-certvalidator==0.27.0
+pyparsing==3.2.3
+pypdf==5.8.0
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyppeteer==2.0.0
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+python-bidi==0.6.6
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.1.1
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+reportlab==4.4.3
+requests==2.32.4
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.26.0
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==1.7.1
+scipy==1.15.3
+sentence-transformers==5.0.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.41
+streamlit==1.48.0
+svglib==1.5.1
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tokenizers==0.21.2
+toml==0.10.2
+tomli==2.2.1
+torch==2.7.1
+tornado==6.5.1
+tqdm==4.67.1
+transformers==4.53.2
+typer==0.16.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+tzlocal==5.3.1
+Unidecode==1.4.0
+uritemplate==4.2.0
+uritools==5.0.0
+urllib3==1.26.20
+uvicorn==0.35.0
+watchdog==6.0.0
+watchfiles==1.1.0
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==10.4
+xhtml2pdf==0.2.17
+xxhash==3.5.0
+yarl==1.20.1
+zipp==3.23.0
+zstandard==0.23.0
